<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/mainPadding"
    tools:context=".ui.pantallamain.MainActivity">

    <TextView
        android:id="@+id/anyadirCocheText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anyadirCoche"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/matriculaTextFieldLayout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:hint="@string/matricula"
        app:startIconDrawable="@drawable/edit_24px"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/electricoCheckbox"
        app:layout_constraintTop_toBottomOf="@+id/anyadirCocheText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/matriculaTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/electricoCheckbox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginBottom="@dimen/margin_8"
        android:text="@string/electrico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/modeloTextFieldLayout"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/marcaTextFieldLayout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginEnd="@dimen/small_margin"
        android:hint="@string/marca"
        app:startIconDrawable="@drawable/edit_24px"
        app:layout_constraintEnd_toStartOf="@+id/modeloTextFieldLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/matriculaTextFieldLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/marcaTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/modeloTextFieldLayout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginStart="@dimen/small_margin"
        android:hint="@string/modelo"
        app:startIconDrawable="@drawable/edit_24px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/marcaTextFieldLayout"
        app:layout_constraintTop_toBottomOf="@+id/matriculaTextFieldLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/modeloTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fechaMatriculaTextFieldLayout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginEnd="@dimen/small_margin"
        android:hint="@string/fechaMatricula"
        app:startIconDrawable="@drawable/event_24px"
        app:layout_constraintEnd_toStartOf="@+id/colorTextFieldLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modeloTextFieldLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fechaMatriculaTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/colorTextFieldLayout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:hint="@string/color"
        app:startIconDrawable="@drawable/edit_24px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fechaMatriculaTextFieldLayout"
        app:layout_constraintTop_toBottomOf="@+id/modeloTextFieldLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/colorTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tipoCoche"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:text="@string/tipoCoche"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tipoCocheRadioGroup"
        app:layout_constraintTop_toBottomOf="@id/colorTextFieldLayout" />

    <RadioGroup
        android:id="@+id/tipoCocheRadioGroup"
        android:checkedButton="@+id/sedan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_8"
        app:layout_constraintTop_toBottomOf="@+id/colorTextFieldLayout"
        app:layout_constraintStart_toEndOf="@id/tipoCoche"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/sedanRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:layout_marginStart="@dimen/small_margin"
            android:text="@string/sedan"/>

        <RadioButton
            android:id="@+id/suvRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:layout_marginStart="16dp"
            android:text="@string/suv"/>

        <RadioButton
            android:id="@+id/otroRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:layout_marginStart="16dp"
            android:text="@string/otro"/>
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/comentariosTextFieldLayout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:hint="@string/comentarios"
        app:startIconDrawable="@drawable/comment_24px"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipoCocheRadioGroup">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/comentariosTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:gravity="top|start"
            android:lines="2"
            android:scrollbars="vertical"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/anteriorComentario"
        style="@style/Widget.Material3.Button.IconButton.Filled"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        app:icon="@drawable/arrow_back_24px"
        app:iconPadding="0dp"
        app:iconGravity="textStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/comentariosTextFieldLayout"
        app:layout_constraintEnd_toStartOf="@+id/indiceTexto"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/siguienteComentario"
        style="@style/Widget.Material3.Button.IconButton.Filled"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        app:icon="@drawable/arrow_forward_24px"
        app:iconPadding="0dp"
        app:iconGravity="textStart"
        app:layout_constraintStart_toEndOf="@+id/indiceTexto"
        app:layout_constraintTop_toBottomOf="@id/comentariosTextFieldLayout"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/indiceTexto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contador"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginHorizontal="@dimen/margin_8"
        app:layout_constraintStart_toEndOf="@id/anteriorComentario"
        app:layout_constraintEnd_toStartOf="@id/siguienteComentario"
        app:layout_constraintTop_toBottomOf="@id/comentariosTextFieldLayout"
        app:layout_constraintBottom_toBottomOf="@id/anteriorComentario" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/buttonGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonLimpiar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:backgroundTint="?attr/colorOnSecondaryContainer"
            app:icon="@drawable/mop_24px"
            app:iconGravity="textStart"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonActualizar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:backgroundTint="?attr/colorOnCustomColor1Container"
            app:icon="@drawable/update_24px"
            app:iconGravity="textStart"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonEliminar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:backgroundTint="?attr/colorError"
            app:icon="@drawable/delete_24px"
            app:iconGravity="textStart"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonGuardar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:icon="@drawable/save_24px"
            app:iconGravity="textStart"/>
    </com.google.android.material.button.MaterialButtonToggleGroup>

</androidx.constraintlayout.widget.ConstraintLayout>